# target-oracle

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
target_oracle/: __init__.py  config.py  connector.py  sinks.py  target.py
target_oracle/tests/: __init__.py  test_core.py
