[tool.poetry]
name = "target-oracle"
version = "0.0.1"
description = "target-oracle is a Singer target for Oracle, built with the Meltano SDK for Singer Targets."
authors = ["Michael Horvath"]
keywords = [
    "ELT",
    "Oracle",
]
license = "MIT"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "^0.4.4"
cx-Oracle = "^8.3.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "target_oracle"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-oracle = 'target_oracle.target:TargetOracle.cli'
